--- a/war/InternalAudit.html
+++ b/war/InternalAudit.html
@@ -13,6 +13,9 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="InternalAudit.css">
     <link type="text/css" rel="stylesheet" href="InternalAudit2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-metro.css">
     <link rel="stylesheet" href="w3.css">
 
     <!--                                           -->
