--- a/war/InternalAudit.html
+++ b/war/InternalAudit.html
@@ -49,6 +49,18 @@
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
   <body>
+  
+  <script>
+  
+  function initFreshChat() {
+    window.fcWidget.init({
+      token: "0245e3eb-fd29-4a75-92f3-942a6dfeea73",
+      host: "https://wchat.eu.freshchat.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.eu.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+</script>
+  
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
